Circle with line and animation

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Semana3</title>
+    <title>Parcial1.Michelle Fernandez</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
+    <header class="container">
+        <section class="container__circulito">
+            <div class="container__line">
+            </div>
+        </section>
+    </header>
 </body>
 </html>
