Rotation and Number change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         <section class="container__circulito">
             <div class="container__line">
             </div>
+            <div class="container__number"> 
+                <p class="print"> 0 </p>
+            </div>
         </section>
     </header>
+    
 </body>
+<script src="./scripts/main.js"></script>
 </html>
